# science-jubilee

./: .buildinfo  .coveragerc  .gitignore  .isort.cfg  .pre-commit-config.yaml  AFL_jubilee_interface_testing.ipynb  AUTHORS.md  CONTRIBUTING.md  HTTP_debug.ipynb  Jubilee_Control_Notebook.ipynb  LICENSE.txt  MANIFEST.in  New_Jubilee_Demo.ipynb  README.md  Untitled.ipynb  debug_syringe-Copy1.ipynb  debug_syringe.ipynb  environment.yml  genindex.html  index.html  integration-tests.ipynb  objects.inv  py-modindex.html  search.html  searchindex.js  septa_test_experiment.ipynb  setup.cfg  setup.py  silica_nps_trial.ipynb
.doctrees/: environment.pickle  index.doctree
.doctrees/autoapi/: index.doctree
.doctrees/building/: building_a_jubilee.doctree  building_tools.doctree  index.doctree  inoculation_tool.doctree  lab_automation_deck.doctree  pipette_tool.doctree  side_camera_tool.doctree  syringe_tool.doctree  tool_postreqs.doctree  tool_prereqs.doctree  top_down_camera_tool.doctree
.doctrees/development/: contributing_code.doctree  contributing_docs.doctree  contributing_tools.doctree  index.doctree  modifying_docs.doctree
.doctrees/getting_started/: color_mixing_setup.doctree  deck_guide.doctree  index.doctree  installation.doctree  machine_intro.doctree  overview.doctree  pipette_guide.doctree  primer.doctree
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug-report.yml  config.yml  discussion.yml  existing-feature-enhancement.yml  feature-request.yml  💡-new-feature-request.md  🔎-bug-report.md  🗣️-discussion.md  🦾-existing-feature-enhancement.md
.github/workflows/: ci.yml  documentation.yml  test-package.yml
_sources/autoapi/: index.rst.txt
_sources/building/: building_tools.rst.txt  inoculation_tool.rst.txt
_sources/development/: contributing_code.rst.txt  index.rst.txt
autoapi/: index.html
autoapi/CalibrationControlPanel/: index.html
autoapi/science_jubilee/: index.html
building/: building_a_jubilee.html  building_tools.html  index.html  inoculation_tool.html  lab_automation_deck.html  pipette_tool.html  side_camera_tool.html  syringe_tool.html  tool_postreqs.html  tool_prereqs.html  top_down_camera_tool.html
calibration/: DeckCalibration.ipynb  IntegrationTests.ipynb  LabAutomationDeckCalibration.ipynb
calibration/templates/: lab_automation_deck_template.json
development/: contributing_code.html  contributing_docs.html  contributing_tools.html  index.html  modifying_docs.html
docs/: conf.py  index.md  requirements.txt
docs/building/: REL.md  assembly_instructions.md  build_plate.md  building_a_jubilee.md  building_tools.md  corexy.md  corner_brackets.md  corner_plate.md  crossbar.md  designing_custom_tools.md  heatset_inserts.md  http_syringe.md  index.md  inoculation_tool.md  jubilee_travel.md  lab_automation_deck.md  lower_frame.md  motor_plate.md  outer_frame.md  panel.md  parking_posts.md  pipette_tool.md  pneumatic_sample_loader.md  prerequisite_knowledge.md  side_camera_tool.md  software.md  syringe_tool.md  tool_crash_detection.md  tool_offsets.md  tool_postreqs.md  tool_prereqs.md  toolchanger_carriage.md  top_down_camera_tool.md  wiring.md  z_axis.md
docs/development/: contributing_code.md  contributing_docs.md  contributing_docs.rst  contributing_tools.md  contributing_tools.rst  index.md  modifying_docs.rst
docs/gcode/: color_mixing_demo_config.g
docs/getting_started/: color_mixing_setup.md  deck_guide.md  index.md  installation.md  installation.rst  machine_intro.md  machine_intro.rst  new_developer_guide.md  new_user_guide.md  overview.md  pipette_guide.md  pipette_guide.rst  primer.md  primer.rst
docs/notebooks/: AutomationDeckIntro.ipynb  GelPrinting.ipynb  IntegrationTests.ipynb  LabwareIntro.ipynb  Labware_Object_Demo.ipynb  MachineJogging.ipynb  PipetteIntro.ipynb  SerialDilution.ipynb  SetZOffset.ipynb  SyringeExtruderIntro.ipynb  TakingPictures.ipynb  serial-dilution.ipynb
docs/source/: conf.py  index.rst
getting_started/: color_mixing_setup.html  deck_guide.html  index.html  installation.html  machine_intro.html  overview.html  pipette_guide.html  primer.html
science_jubilee/: Jubilee_controller.py  Machine.py  Machine_MP.py  __init__.py  utils.py
science_jubilee/calibration/: BasicGelPrinting.ipynb  GelPrintingTests.ipynb  (+5 more)
tests/: conftest.py  test_import.py
tool_library/sonicator/rp2040/: CMakeLists.txt  README.md  main.c
(+356 files in other folders)
